; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_bind_devcrypto.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_bind_devcrypto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@engine_devcrypto_id = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"/dev/crypto engine\00", align 1
@devcrypto_unload = common dso_local global i32 0, align 4
@devcrypto_cmds = common dso_local global i32 0, align 4
@devcrypto_ctrl = common dso_local global i32 0, align 4
@devcrypto_ciphers = common dso_local global i32 0, align 4
@devcrypto_dh = common dso_local global i32 0, align 4
@devcrypto_digests = common dso_local global i32 0, align 4
@devcrypto_dsa = common dso_local global i32 0, align 4
@devcrypto_ec = common dso_local global i32 0, align 4
@devcrypto_rsa = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @bind_devcrypto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bind_devcrypto(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = load i32, i32* @engine_devcrypto_id, align 4
  %6 = call i32 @ENGINE_set_id(i32* %4, i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %27

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @ENGINE_set_name(i32* %9, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %27

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @devcrypto_unload, align 4
  %15 = call i32 @ENGINE_set_destroy_function(i32* %13, i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %12
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* @devcrypto_cmds, align 4
  %20 = call i32 @ENGINE_set_cmd_defns(i32* %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* @devcrypto_ctrl, align 4
  %25 = call i32 @ENGINE_set_ctrl_function(i32* %23, i32 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %22, %17, %12, %8, %1
  store i32 0, i32* %2, align 4
  br label %34

28:                                               ; preds = %22
  %29 = call i32 (...) @prepare_cipher_methods()
  %30 = load i32*, i32** %3, align 8
  %31 = load i32, i32* @devcrypto_ciphers, align 4
  %32 = call i64 @ENGINE_set_ciphers(i32* %30, i32 %31)
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %28, %27
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @ENGINE_set_id(i32*, i32) #1

declare dso_local i32 @ENGINE_set_name(i32*, i8*) #1

declare dso_local i32 @ENGINE_set_destroy_function(i32*, i32) #1

declare dso_local i32 @ENGINE_set_cmd_defns(i32*, i32) #1

declare dso_local i32 @ENGINE_set_ctrl_function(i32*, i32) #1

declare dso_local i32 @prepare_cipher_methods(...) #1

declare dso_local i64 @ENGINE_set_ciphers(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
